telemetry-grafana/overlays/prod/grafana-external-route.enc.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    name: grafana-external
    labels:
        shard: internal
spec:
    host: telemeter-lts-dashboards.datahub.redhat.com
    to:
        kind: Service
        name: grafana
        weight: 100
    wildcardPolicy: None
    tls:
        insecureEdgeTerminationPolicy: ENC[AES256_GCM,data:4AYH1MkBVso=,iv:Q5/BNr3J1J5vlu7duyocifSP4OJit8Oc99XIBgDoobI=,tag:WV/+3n9oC5Ehnu6Bp2fsMQ==,type:str]
        termination: ENC[AES256_GCM,data:eQ1Xw6zeMjJR,iv:UR/mom/P2QaCcmKGWfG5yW8nz8nLkKI3IP7EQGjxrNc=,tag:AOsJF0CcA9FiX3I+t7QkxQ==,type:str]
        certificate: ENC[AES256_GCM,data:iUhOfEKF8sWx0SXkGY21Jp4EE5UiOaM42oxca5/Qi3sV/cXCm1dZQxGTUoKKxxxprVsLnPt5EOkYcuLGAwHBgAO8rj55zkswGEFWLuZgYPGeEu1YgS6SQcA2c8d8x3TuTN0XN2oFJ4Yp4fdBih3MQ6P149hmVo9ElGY8+vSzFEBBLZm6UwkJa1NVjST3568fDUwCYoxFAdCCcC9afMOIYSx83L5MNGph3RGgn/9y8Aj+tgFOjeRiK+gPd5L42IS5craDZNFV6rbyxST1BpOpWQLqQTcZt7lSIKHrLLQumjSsxFtbYfF6axyaUBTaO3VDZPN3/NDNNKSPSCg2GhRZiiNuA6uf1kcyufF0RNxgF6Rb/FHlM3AB3d3eBc4JvuHdqIxwK9C7x0Eu3m+3llVOf6Ea+XwH3OW85eDj2pop65mY7nxp2yKUpp3Sm4It1xTb95hz0vII22/ [...]
        key: ENC[AES256_GCM,data:Ik+VmCNcP6PS86RxK1XTlowejkOrbMlmRg7kzxSDamjFNN4Cse/aV/1WymrhijZk6H+RG3T/4O8WXYIBMdNucMZzwKONvQFuCyWYzGTLT1SyOiU592GYjjAKEH4oPkuvWoyyOcOoWURPkIVg3WvsakK/KluLVYNNWtMcGaGzV2ysjYJ9YO6htZJKB2RBA6VeZHdv9T8pHgMSNha0biNdGBqSGlkGbC0IHXpxLdbgXXtsveJAo4F2DUbKw8lRTebXUC/oAB2tlcmmVG2WhApGLeHpASEDz+Ms755xqT+iqSCoijMGcUv/dR2dJ37Ak8YuozZPRw8PNt3kj8G8DKat/9Ev85nIS2MBB/6vahjox8VyJcjKf14yApc5yb0PYPjDLquDFbqEgdCqDvuteSzCFmUjPxTkRSLCmRLfAbvlyK018i174oXi+iP1QE6whZGfo73pceGZIkC5da4CA6e [...]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2025-02-18T01:56:58Z"
    mac: ENC[AES256_GCM,data:H5cbsW0wcE+Fs1knob3xJ9U0zNp//3phsFMh8anDq12lFU+YzOF/YOPtcXgy1Y4ufr88Rt02Igr6y1M+2muxOHBF7VJTtdCkjJOWAhWis51Y0kVS08LBZgdMI/7X5cb/g6B1cGcVhlQgVtEypi/ynyLCZDj9AC6oNASdrbD+svM=,iv:bYJXsdLUjChgqBpmjGwJ1igVsXFU3stQPIF+l2rsUHo=,tag:dmZIoXoUADdCzT1gw2VEXQ==,type:str]
    pgp:
        - created_at: "2021-10-04T17:07:21Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQf/RNj0bER2z6OU7HFq/z6jXarbvRs46sNUX5eseGouEwFj
[...]
            QHNHtayeW5zY8WVru0LhaLN7J33nuS1VwAm0J30=
            =wJwb
            -----END PGP MESSAGE-----
          fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.8.1
